# tmux-shot

./: LICENSE  README.md  README_zh.md  pyproject.toml  tmux-shot  tmux-shot-capture
docs/: DESIGN.md  REQUIREMENTS.md
tmux_shot/: __init__.py  __main__.py  ansi.py  cli.py  config.py  fonts.py  input.py  layout.py  output.py  renderer.py  themes.py
